# flex-cli

./: .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TODO.md  completion  flex_cli  install  lcli  pyproject.toml  requirements.txt  requirements_build.txt  requirements_dev.txt  requirements_list.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  coverage.yml  python-app.yml  python-package.yml  python-publish.yml
.jenkins/release/: Jenkinsfile
docs/: .gitignore  README.rst
docs/source/: architecture.rst  changelog.rst  conf.py  configuration.md  configuring.rst  contributing.rst  index.rst  installing.rst  junk.rst  requirements.txt
docs/source/_static/: analytics.html
docs/source/_templates/: layout.html
docs/source/architecture/: cache.rst  configuration.rst
docs/source/customization/: demo.rst  extend.rst  plugins.rst  structure.rst
requirements/: binary.txt  build.txt  docs.txt  poetry.txt  test.txt
src/flex_ansible/command/wrapper/: ansible.py
src/flex_cli/: __init__.py  __main__.py
src/flex_cli/application/: __init__.py  cli.py  flex_cli.py
src/flex_cli/config/: __init__.py  exception.py  merge.py
src/flex_cli/etc/: __init__.py  config.py  env.py
src/flex_cli/handler/: bash.py  debug.py  shell_proxy.py  standalone_executable.py
src/flex_framework/: application.py  exceptions.py  filesystem.py  loader.py  logger.py  object_manager.py
src/flex_framework/api/: __init__.py  application.py  command.py  config.py  exception.py  factory.py  handler.py  proxy.py  service.py
src/flex_framework/api/command/: input.py
src/flex_framework/application/: __init__.py  constants.py  response.py
src/flex_framework/config/: __init__.py  deployment.py  exception.py  merge.py  model.py
src/flex_framework/config/deployment/: __init__.py  directories.py
src/flex_framework/config/discover/: __init__.py
src/flex_framework/config/reader/: __init__.py  yaml.py
src/flex_framework/console/: __init__.py  handler.py  input.py  otput.py
src/flex_framework/environment/: __init__.py  manager.py
src/flex_framework/shell/: .bashrc  bash.py  bash_alias_symlink  bash_proxy_symlink  proxy.py
src/lcli/: __init__.py  __main__.py  app.py  cache.py  config.py  exceptions.py  utils.py
src/lcli/api/: __init__.py  command.py  conroller.py  exception.py  service.py
src/lcli/app_mode/: __init__.py  base.py  exceptions.py  fire.py  interactive.py
src/lcli/command/: __init__.py  builders.py  exceptions.py  input.py  subprocess.py  wrappers.py
src/lcli/config/: commands.yml
src/lcli/config/samples/: commands.yml
src/lcli/config/samples/ansible/: ansible.yml
src/lcli/config/samples/ansible/inventory/: all.yml
src/lcli/config/samples/ansible/playbooks/: playbook.db_servers.yml  playbook.web_servers.yml  playbook.yml
src/lcli/config/samples/ansible/playbooks/roles/webservers.performance/tasks/: main.yml
src/lcli/config/samples/ansible/playbooks/roles/webservers.security/tasks/: main.yml
src/lcli/config/samples/commands/: calculator.yml  git.yml  gitw.yml  ldocker.yml  opdocker.yml
src/lcli/config/samples/commands/opdocker/: up.yml
src/lcli/config/samples/prototypes/: commands.xml  commands.xsd
src/lcli/config/schema/: commands.json
src/lcli/input/: __init__.py  exctptions.py  prompt.py  prompt_toolkit.py
src/lcli/tools/: __init__.py  base.py  git.py  helper.py  sample_tool.py
src/tests/: __init__.py
src/tests/unit/: __init__.py  test_lcli.py
src/tests/unit/flex_cli/config/: config_object_test.py
