[metadata]
license-file = LICENSE

[wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts =
    --cov-report term-missing --cov-branch --cov-report xml --cov-report term
    --cov=codebase.code -vv --strict-markers -rfE

testpaths =
    src/tests

[pytype]
inputs = .
output = .pytype

[run]
relative_files = true